--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-table-component": "^1.2.2",
     "react-native-uuid-generator": "^6.1.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-view-shot": "^3.8.0",
     "react-redux": "^9.1.1",
     "redux": "^5.0.1",
